# internal/repository/infra/type.go
@@ -15,17 +15,17 @@ type infraTypeRepository struct {
 	db database.DB
 }
 
-func NewInfrastructureTypeRepository(db database.DB) *infraTypeRepository {
+func NewInfraTypeRepository(db database.DB) *infraTypeRepository {
 	return &infraTypeRepository{db: db}
 }
 
-func (t *infraTypeRepository) Create(ctx context.Context, infraType *model.InfrastructureType) (*model.InfrastructureType, error) {
+func (t *infraTypeRepository) Create(ctx context.Context, infraType *model.InfraType) (*model.InfraType, error) {
 	typeModel := dbmodel.ToTypeModel(infraType)
 	err := t.db.GORM().WithContext(ctx).Create(&typeModel).Error
 	if err != nil {
 		var pgErr *pgconn.PgError
 		if errors.As(err, &pgErr) && pgErr.Code == database.ErrPgUniqueViolation {
-			return nil, ErrInfrastructureTypeAlreadyExists
+			return nil, ErrInfraTypeAlreadyExists
 		}
 		return nil, err
 	}
@@ -33,12 +33,12 @@ func (t *infraTypeRepository) Create(ctx context.Context, infraType *model.Infra
 	return infraType, nil
 }
 
-func (t *infraTypeRepository) GetByID(ctx context.Context, id uint64) (*model.InfrastructureType, error) {
-	var typeModel dbmodel.InfrastructureType
+func (t *infraTypeRepository) GetByID(ctx context.Context, id uint64) (*model.InfraType, error) {
+	var typeModel dbmodel.InfraType
 	err := t.db.GORM().WithContext(ctx).First(&typeModel, id).Error
 	if err != nil {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
-			return nil, ErrInfrastructureTypeNotFound
+			return nil, ErrInfraTypeNotFound
 		}
 		return nil, err
 	}
@@ -46,9 +46,9 @@ func (t *infraTypeRepository) GetByID(ctx context.Context, id uint64) (*model.In
 	return dbmodel.ToType(&typeModel), nil
 }
 
-func (t *infraTypeRepository) Update(ctx context.Context, infraType *model.InfrastructureType) (*model.InfrastructureType, error) {
+func (t *infraTypeRepository) Update(ctx context.Context, infraType *model.InfraType) (*model.InfraType, error) {
 	typeModel := dbmodel.ToTypeModel(infraType)
-	result := t.db.GORM().WithContext(ctx).Model(&dbmodel.InfrastructureType{}).Where("id = ?", infraType.ID).Updates(map[string]any{
+	result := t.db.GORM().WithContext(ctx).Model(&dbmodel.InfraType{}).Where("id = ?", infraType.ID).Updates(map[string]any{
 		"slug":       typeModel.Slug,
 		"name":       typeModel.Name,
 		"weight":     typeModel.Weight,
@@ -57,25 +57,25 @@ func (t *infraTypeRepository) Update(ctx context.Context, infraType *model.Infra
 	if result.Error != nil {
 		var pgErr *pgconn.PgError
 		if errors.As(result.Error, &pgErr) && pgErr.Code == database.ErrPgUniqueViolation {
-			return nil, ErrInfrastructureTypeAlreadyExists
+			return nil, ErrInfraTypeAlreadyExists
 		}
 		return nil, result.Error
 	}
 
 	if result.RowsAffected == 0 {
-		return nil, ErrInfrastructureTypeNotFound
+		return nil, ErrInfraTypeNotFound
 	}
 	return infraType, nil
 }
 
 func (t *infraTypeRepository) Delete(ctx context.Context, id uint64) error {
-	result := t.db.GORM().WithContext(ctx).Delete(&dbmodel.InfrastructureType{}, id)
+	result := t.db.GORM().WithContext(ctx).Delete(&dbmodel.InfraType{}, id)
 	if result.Error != nil {
 		return result.Error
 	}
 
 	if result.RowsAffected == 0 {
-		return ErrInfrastructureTypeNotFound
+		return ErrInfraTypeNotFound
 	}
 	return nil
 }
